fix: mobile form text wrap

--- a/src/App.css
+++ b/src/App.css
@@ -55,11 +55,15 @@
 
   #email {
     font-size: 0.875em;
+    width: 100%;
+    overflow-wrap: break-word;
   }
 
   #subscribe {
+    width: 100%;
     max-width: 80%;
   }
+
 
   .header-text h1 {
     font-size: 2.25em;
@@ -214,6 +218,7 @@ h1{
 .timer {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .timer h1 {
